--- a/index.html
+++ b/index.html
@@ -5,47 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive card details form</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Interactive card details form</title>
 </head>
 <body>
-
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
-  <!-- Completed state start -->
-
-  Thank you!
-  We've added your card details
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="left-board">
+    <img src="./images/bg-main-desktop.png" class="main-desktop" alt="">
+    <div class="cards">
+      <div class="card-front">
+        <img src="./images/bg-card-front.png" class="card-front" alt="card-front">
+        <div class="card-container">
+          <img src="./images/card-logo.svg" class="card-logo" alt="card-logo">
+          <h1 id="inp-number">0000 0000 0000 0000</h1>
+          <div class="card-info">
+            <span id="inp-name">Jane Appleseed</span>
+            <span id="date">
+              <span id="inp-month">00</span>
+              <span id="inp-year">00</span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="card-back">
+        <img src="./images/bg-card-back.png" class="card-back" alt="card-back">
+        <span id="inp-cvc">000</span>
+      </div>
+    </div>
   </div>
+
+  <div class="right-board">
+   <form action="">
+    <div class="inputBox">
+      <span>CARDHOLDER NAME</span>
+      <input type="text" maxlength="19" class="card-holder-input" placeholder="e.g. Jane Appleseed" id="card-holder-name">
+    </div>
+    <div class="inputBox">
+      <span>CARD NUMBER</span>
+      <input type="text" minlength="16" maxlength="16" class="card-number-input" placeholder="e.g. 1234 5678 9123 0000" id="card-number">
+    </div>
+    <div class="flexbox">
+      <div class="inputBox">
+        <span>EXP. DATE (MM/YY)</span>
+        <br>
+        <input type="text" maxlength="2" class="month-input" id="month-input" placeholder="MM">
+        <input type="text" maxlength="2" class="year-input" id="year-input" placeholder="YY">
+      <div class="inputBox">  
+        <span>CVC</span>
+        <br>
+        <input type="text" maxlength="3" class="cvc-input" id="cvc-input" placeholder="e.g. 123">
+      </div>
+    </div>
+    <input type="submit" value="Confirm" class="confirm-btn" id="confirm-btn">
+   </form>
+   <div class="thank">
+    <img src="./images/icon-complete.svg" alt="completed">
+    <h1>Thank you!</h1>
+    <p>We've added your card details</p>
+    <button>Continue</button>
+   </div>
+  </div>
+  <script src="./app.js"></script>
 </body>
 </html>
