--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     <div class="inputBox">
       <span>CARDHOLDER NAME</span>
       <input type="text" maxlength="19" class="card-holder-input" placeholder="e.g. Jane Appleseed" id="card-holder-name">
+      <div class="error"></div>
     </div>
     <div class="inputBox">
       <span>CARD NUMBER</span>
       <input type="text" minlength="16" maxlength="16" class="card-number-input" placeholder="e.g. 1234 5678 9123 0000" id="card-number">
+      <div class="error"></div>
     </div>
     <div class="flexbox">
       <div class="inputBox">
@@ -53,19 +55,21 @@
         <br>
         <input type="text" maxlength="2" class="month-input" id="month-input" placeholder="MM">
         <input type="text" maxlength="2" class="year-input" id="year-input" placeholder="YY">
+        <div class="error"></div>
       <div class="inputBox">  
         <span>CVC</span>
         <br>
         <input type="text" maxlength="3" class="cvc-input" id="cvc-input" placeholder="e.g. 123">
+        <div class="error"></div>
       </div>
     </div>
-    <input type="submit" value="Confirm" class="confirm-btn" id="confirm-btn">
+    <button type="submit" value="Confirm" class="confirm-btn" id="confirm-btn">Confirm</button>
    </form>
    <div class="thank">
     <img src="./images/icon-complete.svg" alt="completed">
-    <h1>Thank you!</h1>
+    <h1>THANK YOU!</h1>
     <p>We've added your card details</p>
-    <button>Continue</button>
+    <button type="submit">Continue</button>
    </div>
   </div>
   <script src="./app.js"></script>
